add: ktr request detail
